<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.sevenwonders.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            style="@style/Question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/welcome" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:src="@drawable/petra" />

        <TextView
            style="@style/Question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/artemistemple_radio_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1a"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/hanging_gardens_radio_button"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1b" />

            <RadioButton
                android:id="@+id/statue_zeus_radio_button"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1c" />

            <RadioButton
                android:id="@+id/giza_pyramid_radio_button"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1d" />
        </RadioGroup>

        <TextView
            style="@style/Question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/question2" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/lighthouse_radio_button"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2a" />

            <RadioButton
                android:id="@+id/taj_mahal_radio_button"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2b" />

            <RadioButton
                android:id="@+id/colossus_of_radio_button"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2c" />

            <RadioButton
                android:id="@+id/halicarnassus_radio_button"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2d" />

        </RadioGroup>

        <TextView
            style="@style/Question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3" />

        <EditText
            android:id="@+id/historian"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/answer3"
            android:inputType="textCapWords"
            android:textSize="16sp" />

        <TextView
            style="@style/Question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4" />

        <CheckBox
            android:id="@+id/mount_everest_checkbox"
            style="@style/CheckBoxStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer4a" />

        <CheckBox
            android:id="@+id/grand_canyon_checkbox"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer4b" />

        <CheckBox
            android:id="@+id/aurora_checkbox"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer4c" />

        <CheckBox
            android:id="@+id/panama_checkbox"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer4d" />


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:scaleType="fitXY"
            android:src="@drawable/grand" />

        <TextView
            style="@style/Question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question5" />


        <CheckBox
            android:id="@+id/wall_checkbox"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer5a" />

        <CheckBox
            android:id="@+id/petra_checkbox"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer5b" />

        <CheckBox
            android:id="@+id/colosseum_checkbox"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer5c" />

        <CheckBox
            android:id="@+id/catacombs_checkbox"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer5d" />

        <TextView
            style="@style/Question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question6" />

        <CheckBox
            android:id="@+id/polar_checkbox"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer6a" />

        <CheckBox
            android:id="@+id/belt_checkbox"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer6b" />

        <CheckBox
            android:id="@+id/olympus_checkbox"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer6c" />

        <CheckBox
            android:id="@+id/rings_checkbox"
            style="@style/RadioButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer6d" />

        <TextView
            style="@style/Question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question7" />

        <EditText
            android:id="@+id/another_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:hint="@string/answer7"
            android:inputType="textCapWords" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:scaleType="fitXY"
            android:src="@drawable/wall" />

        <TextView
            style="@style/Question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question8" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/km22_radio_button"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer8a" />

            <RadioButton
                android:id="@+id/km15_radio_button"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer8b" />

            <RadioButton
                android:id="@+id/km100_radio_button"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer8c" />

            <RadioButton
                android:id="@+id/km50_radio_button"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer8d" />

        </RadioGroup>

        <TextView
            style="@style/Question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question9" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/bc6320_radio_button"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer9a" />

            <RadioButton
                android:id="@+id/bc4000_radio_button"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer9b" />

            <RadioButton
                android:id="@+id/bc2560_radio_button"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer9c" />

            <RadioButton
                android:id="@+id/bc1000_radio_button"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer9d" />

        </RadioGroup>

        <TextView
            style="@style/Question2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question10" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/yes_radio_button"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer10a" />

            <RadioButton
                android:id="@+id/no_radio_button"
                style="@style/RadioButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer10b" />

        </RadioGroup>

        <Button
            android:id="@+id/submit_button"
            style="@style/Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="submit"
            android:text="@string/submit" />

    </LinearLayout>

</ScrollView>